Fixed bug in mobile top header to prevent icons from wrapping on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -262,6 +262,9 @@ footer {
         font-size: .9rem;
     }
 
+    .navbar {
+        flex-wrap: nowrap !important;
+    }
 
 
 }
